--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>treysullivent.github.io</title>
+    <title>treysu.github.io</title>
     <style>
         body {
             display: flex;
@@ -32,6 +32,6 @@
     </style>
 </head>
 <body>
-    <a href="https://treysullivent.com" target="_blank">Visit treysullivent.com</a>
+    <a href="https://treysu.com" target="_blank">Visit treysu.com</a>
 </body>
 </html>
